Add Api Controllers (Owner and Pet) Use of Surefire Maven Plugin for UT Use of Failsafe Maven Plugin for IT Integration Tests for Api Controllers with embedded Tomcat7 and a dynamically set port Resource filtering to set the Context Path and Port